<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructions_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/headers"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginEnd="@dimen/end_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:textColor="@color/black"
            android:text="@string/instructions_header" />
        <TextView
            android:id="@+id/instructions_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginEnd="@dimen/end_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:textColor="@color/black"
            android:text="@string/instructions_text" />

        <Button
            android:id="@+id/make_money_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginStart="@dimen/start_margin"
            android:layout_marginEnd="@dimen/end_margin"
            android:text="@string/make_money_button" />
    </LinearLayout>
</layout>