<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    LinearLayout is a view group that aligns all children in a single direction, vertically or horizontally.-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginStart="@dimen/start_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/headers" />
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:layout_marginEnd="@dimen/end_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginStart="@dimen/start_margin"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/get_start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginEnd="@dimen/end_margin"
            android:layout_marginStart="@dimen/start_margin"
            android:text="@string/get_start_button" />
    </LinearLayout>
</layout>